--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" width="device-width , initial-scale = 1 , shrink-to-fit = no">
+    <link rel="icon" href="./img/fractal_fractional_fragmental_partial-512.png" type="image/png">
     <title>ANIS MELLITI</title>
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="./style/bootstrap.css">
@@ -23,7 +24,9 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html"><span>AM</span></a>
+                    <a class="navbar-brand logo_h" href="index.html"> <img
+                            src="./img/fractal_fractional_fragmental_partial-512.png" alt="">
+                        <span>AM</span></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -35,8 +38,8 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#aboutme">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -61,7 +64,6 @@
                                 the determination
                                 that whether we win or lose, we have applied the best of ourselves to the task at hand.
                             </p>
-                            <a class="banner_btn" href="#">Discover Now</a>
                         </div>
                     </div>
                 </div>
@@ -127,6 +129,44 @@
         </div>
     </section>
     <!--================End Welcome Area =================-->
+    <!-- ================About=========================== -->
+    <section class="feature_area p_120" id="aboutme">
+        <div class="container">
+            <div class="main_title">
+                <h2>offerings to my clients</h2>
+                <p>If you are looking for a skilled web developer with a big ability to learn and adapt to new
+                    technologie only to satisfy my client.</p>
+            </div>
+            <div class="feature_inner row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature_item">
+                        <h4>Docplanner</h4>
+                        <p>Docplanner integration html & css.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature_item">
+                        <h4>Wistia</h4>
+                        <p>Wistia integration html & css.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature_item">
+                        <h4>Shopping cart</h4>
+                        <p>Shopping cart using Html Css and JavaScript.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature_item">
+                        <h4>Form Validation</h4>
+                        <p>Form Validation using Html Css and JavaScript.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--================End Feature Area =================-->
     <!--================Footer Area =================-->
     <footer class="footer_area p_120">
         <div class="container">
@@ -146,7 +186,7 @@
 
                 <div class="col-lg-2 offset-lg-5">
                     <aside class="f_widget social_widget">
-                        <div class="f_title">
+                        <div class="f_title" id="contact">
                             <h3>Follow Me</h3>
                         </div>
                         <p>Let us be social</p>
