--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/responsive.css">
-    <!-- Script -->
-    <script src="./script/script.js"></script>
+
 </head>
 
 <body>
@@ -78,9 +77,9 @@
                 <div class="col-lg-6">
                     <div class="welcome_text">
                         <h4>About Myself</h4>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards especially in the workplace. That’s why it’s crucial that, as women, our behavior
-                            on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+                        <p>Winners embrace hard work. They love the discipline of it, the trade-off they're making to
+                            win. Losers, on the other hand, see it as punishment. And that's the difference.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -206,7 +205,8 @@
     </footer>
     <!--================End Footer Area =================-->
 
-
+    <!-- Script -->
+    <script src="./script/script.js"></script>
 
 </body>
 
