--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
     <!--================End Home Banner Area =================-->
     <!--================Welcome Area =================-->
-    <section class="welcome_area p_120">
+    <section class="welcome_area p_120" id="aboutme">
         <div class="container">
             <div class="row welcome_inner">
                 <div class="col-lg-6">
@@ -129,7 +129,7 @@
     </section>
     <!--================End Welcome Area =================-->
     <!-- ================About=========================== -->
-    <section class="feature_area p_120" id="aboutme">
+    <section class="feature_area p_120">
         <div class="container">
             <div class="main_title">
                 <h2>offerings to my clients</h2>
